package Q2;

public abstract class AbstractPushButton {
    public abstract void render();
}
