package Q2;

// Abstract Product: List Box
public abstract class AbstractListBox {
    public abstract void render();
}