package Q2;

// Abstract Product: Text Field
public abstract class AbstractTextField {
    public abstract void render();
}
