package Q2;

// Concrete Product: Linux List Box
public class LinuxListBox extends AbstractListBox {
    @Override
    public void render() {
        System.out.println("Rendering a Linux list box.");
    }
}