package Q2;

// Concrete Product: Linux Push Button
public class LinuxPushButton extends AbstractPushButton {
    @Override
    public void render() {
        System.out.println("Rendering a Linux push button.");
    }
}