package Q2;

// Concrete Product: Linux Text Field
public class LinuxTextField extends AbstractTextField {
    @Override
    public void render() {
        System.out.println("Rendering a Linux text field.");
    }
}