package Q2;

// Concrete Product: macOS List Box
public class MacListBox extends AbstractListBox {
    @Override
    public void render() {
        System.out.println("Rendering a macOS list box.");
    }
}