package Q2;

// Concrete Product: macOS Push Button
public class MacPushButton extends AbstractPushButton {
    @Override
    public void render() {
        System.out.println("Rendering a macOS push button.");
    }
}
