package Q2;

// Concrete Product: macOS Text Field
public class MacTextField extends AbstractTextField {
    @Override
    public void render() {
        System.out.println("Rendering a macOS text field.");
    }
}