package Q2;

// Concrete Product: Windows List Box
public class WinListBox extends AbstractListBox {
    @Override
    public void render() {
        System.out.println("Rendering a Windows list box.");
    }
}