package Q2;

// Concrete Product: Windows Push Button
public class WinPushButton extends AbstractPushButton {
    @Override
    public void render() {
        System.out.println("Rendering a Windows push button.");
    }
}