package Q2;

// Concrete Product: Windows Text Field
public class WinTextField extends AbstractTextField {
    @Override
    public void render() {
        System.out.println("Rendering a Windows text field.");
    }
}
