@startuml

title __Q2's Class Diagram__\n

  namespace Q2 {
    abstract class Q2.AbstractListBox {
        {abstract} + render()
    }
  }
  

  namespace Q2 {
    abstract class Q2.AbstractPushButton {
        {abstract} + render()
    }
  }
  

  namespace Q2 {
    abstract class Q2.AbstractTextField {
        {abstract} + render()
    }
  }
  

  namespace Q2 {
    interface Q2.GUIFactory {
        {abstract} + createListBox()
        {abstract} + createPushButton()
        {abstract} + createTextField()
    }
  }
  

  namespace Q2 {
    class Q2.LinuxFactory {
        + createListBox()
        + createPushButton()
        + createTextField()
    }
  }
  

  namespace Q2 {
    class Q2.LinuxListBox {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.LinuxPushButton {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.LinuxTextField {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.MacFactory {
        + createListBox()
        + createPushButton()
        + createTextField()
    }
  }
  

  namespace Q2 {
    class Q2.MacListBox {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.MacPushButton {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.MacTextField {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.Main {
        {static} + main()
    }
  }
  

  namespace Q2 {
    class Q2.WinFactory {
        + createListBox()
        + createPushButton()
        + createTextField()
    }
  }
  

  namespace Q2 {
    class Q2.WinListBox {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.WinPushButton {
        + render()
    }
  }
  

  namespace Q2 {
    class Q2.WinTextField {
        + render()
    }
  }
  

  Q2.LinuxFactory .up.|> Q2.GUIFactory
  Q2.LinuxListBox -up-|> Q2.AbstractListBox
  Q2.LinuxPushButton -up-|> Q2.AbstractPushButton
  Q2.LinuxTextField -up-|> Q2.AbstractTextField
  Q2.MacFactory .up.|> Q2.GUIFactory
  Q2.MacListBox -up-|> Q2.AbstractListBox
  Q2.MacPushButton -up-|> Q2.AbstractPushButton
  Q2.MacTextField -up-|> Q2.AbstractTextField
  Q2.WinFactory .up.|> Q2.GUIFactory
  Q2.WinListBox -up-|> Q2.AbstractListBox
  Q2.WinPushButton -up-|> Q2.AbstractPushButton
  Q2.WinTextField -up-|> Q2.AbstractTextField


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
